// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <ul>
    <li
      className="padded-top padded-bottom"
      key="0"
    >
      <div
        className="display-flex-center"
      >
        <withAppStateContext(Avatar)
          className="little-spacer-right"
          name="Luke Skywalker"
          size={20}
        />
        <strong>
          Luke Skywalker
        </strong>
        <span
          className="little-spacer-left little-spacer-right"
        >
          -
        </span>
        <DateTimeFormatter
          date="2018-10-12"
        />
      </div>
      <div
        className="spacer-top"
      >
        <IssueChangelogDiff
          diff={
            {
              "key": "assign",
              "newValue": "darth.vader",
              "oldValue": "luke.skywalker",
            }
          }
          key="0"
        />
      </div>
    </li>
    <li
      className="padded-top padded-bottom bordered-top"
      key="1"
    >
      <div
        className="display-flex-center"
      >
        <withAppStateContext(Avatar)
          className="little-spacer-right"
          name="Luke Skywalker"
          size={20}
        />
        <strong>
          Luke Skywalker
        </strong>
        <span
          className="little-spacer-left little-spacer-right"
        >
          -
        </span>
        <DateTimeFormatter
          date="2018-10-01"
        />
      </div>
      <div
        className="spacer-top"
      >
        <IssueChangelogDiff
          diff={
            {
              "key": "assign",
              "newValue": "darth.vader",
              "oldValue": "luke.skywalker",
            }
          }
          key="0"
        />
      </div>
    </li>
    <li
      className="padded-top padded-bottom bordered-top"
      key="2"
    >
      <div
        className="display-flex-center"
      >
        <withAppStateContext(Avatar)
          className="little-spacer-right"
          name="John Doe"
          size={20}
        />
        <strong>
          John Doe
        </strong>
        <span
          className="little-spacer-left"
        >
          hotspots.review_history.comment_added
        </span>
        <span
          className="little-spacer-left little-spacer-right"
        >
          -
        </span>
        <DateTimeFormatter
          date="2018-09-10"
        />
      </div>
      <div
        className="spacer-top display-flex-space-between"
      >
        <SafeHTMLInjection
          htmlAsString="<strong>TEST</strong>"
          sanitizeLevel={2}
        >
          <div
            className="markdown"
          />
        </SafeHTMLInjection>
      </div>
    </li>
    <li
      className="padded-top padded-bottom bordered-top"
      key="3"
    >
      <div
        className="display-flex-center"
      >
        <withAppStateContext(Avatar)
          className="little-spacer-right"
          name="John Doe"
          size={20}
        />
        <strong>
          John Doe
        </strong>
        <span
          className="little-spacer-left"
        >
          hotspots.review_history.comment_added
        </span>
        <span
          className="little-spacer-left little-spacer-right"
        >
          -
        </span>
        <DateTimeFormatter
          date="2018-09-10"
        />
      </div>
      <div
        className="spacer-top display-flex-space-between"
      >
        <SafeHTMLInjection
          htmlAsString="<strong>TEST</strong>"
          sanitizeLevel={2}
        >
          <div
            className="markdown"
          />
        </SafeHTMLInjection>
      </div>
    </li>
    <li
      className="padded-top padded-bottom bordered-top"
      key="4"
    >
      <div
        className="display-flex-center"
      >
        <withAppStateContext(Avatar)
          className="little-spacer-right"
          name="John Doe"
          size={20}
        />
        <strong>
          user.x_deleted.John Doe
        </strong>
        <span
          className="little-spacer-left"
        >
          hotspots.review_history.comment_added
        </span>
        <span
          className="little-spacer-left little-spacer-right"
        >
          -
        </span>
        <DateTimeFormatter
          date="2018-09-10"
        />
      </div>
      <div
        className="spacer-top display-flex-space-between"
      >
        <SafeHTMLInjection
          htmlAsString="<strong>TEST</strong>"
          sanitizeLevel={2}
        >
          <div
            className="markdown"
          />
        </SafeHTMLInjection>
      </div>
    </li>
  </ul>
  <ButtonLink
    className="spacer-top"
    onClick={[MockFunction]}
  >
    show_all
  </ButtonLink>
</Fragment>
`;

exports[`should render correctly: delete comment overlay 1`] = `
<div
  className="padded abs-width-150"
>
  <p>
    issue.comment.delete_confirm_message
  </p>
  <Button
    className="button-red big-spacer-top pull-right"
    onClick={[Function]}
  >
    delete
  </Button>
</div>
`;

exports[`should render correctly: edit comment overlay 1`] = `
<DropdownOverlay
  placement="bottom-right"
>
  <HotspotCommentPopup
    markdownComment="*TEST*"
    onCancelEdit={[Function]}
    onCommentEditSubmit={[Function]}
  />
</DropdownOverlay>
`;

exports[`should render correctly: show full list 1`] = `
<Fragment>
  <ul>
    <li
      className="padded-top padded-bottom"
      key="0"
    >
      <div
        className="display-flex-center"
      >
        <withAppStateContext(Avatar)
          className="little-spacer-right"
          name="Luke Skywalker"
          size={20}
        />
        <strong>
          Luke Skywalker
        </strong>
        <span
          className="little-spacer-left little-spacer-right"
        >
          -
        </span>
        <DateTimeFormatter
          date="2018-10-12"
        />
      </div>
      <div
        className="spacer-top"
      >
        <IssueChangelogDiff
          diff={
            {
              "key": "assign",
              "newValue": "darth.vader",
              "oldValue": "luke.skywalker",
            }
          }
          key="0"
        />
      </div>
    </li>
    <li
      className="padded-top padded-bottom bordered-top"
      key="1"
    >
      <div
        className="display-flex-center"
      >
        <withAppStateContext(Avatar)
          className="little-spacer-right"
          name="Luke Skywalker"
          size={20}
        />
        <strong>
          Luke Skywalker
        </strong>
        <span
          className="little-spacer-left little-spacer-right"
        >
          -
        </span>
        <DateTimeFormatter
          date="2018-10-01"
        />
      </div>
      <div
        className="spacer-top"
      >
        <IssueChangelogDiff
          diff={
            {
              "key": "assign",
              "newValue": "darth.vader",
              "oldValue": "luke.skywalker",
            }
          }
          key="0"
        />
      </div>
    </li>
    <li
      className="padded-top padded-bottom bordered-top"
      key="2"
    >
      <div
        className="display-flex-center"
      >
        <withAppStateContext(Avatar)
          className="little-spacer-right"
          name="John Doe"
          size={20}
        />
        <strong>
          John Doe
        </strong>
        <span
          className="little-spacer-left"
        >
          hotspots.review_history.comment_added
        </span>
        <span
          className="little-spacer-left little-spacer-right"
        >
          -
        </span>
        <DateTimeFormatter
          date="2018-09-10"
        />
      </div>
      <div
        className="spacer-top display-flex-space-between"
      >
        <SafeHTMLInjection
          htmlAsString="<strong>TEST</strong>"
          sanitizeLevel={2}
        >
          <div
            className="markdown"
          />
        </SafeHTMLInjection>
      </div>
    </li>
    <li
      className="padded-top padded-bottom bordered-top"
      key="3"
    >
      <div
        className="display-flex-center"
      >
        <withAppStateContext(Avatar)
          className="little-spacer-right"
          name="John Doe"
          size={20}
        />
        <strong>
          John Doe
        </strong>
        <span
          className="little-spacer-left"
        >
          hotspots.review_history.comment_added
        </span>
        <span
          className="little-spacer-left little-spacer-right"
        >
          -
        </span>
        <DateTimeFormatter
          date="2018-09-10"
        />
      </div>
      <div
        className="spacer-top display-flex-space-between"
      >
        <SafeHTMLInjection
          htmlAsString="<strong>TEST</strong>"
          sanitizeLevel={2}
        >
          <div
            className="markdown"
          />
        </SafeHTMLInjection>
      </div>
    </li>
    <li
      className="padded-top padded-bottom bordered-top"
      key="4"
    >
      <div
        className="display-flex-center"
      >
        <withAppStateContext(Avatar)
          className="little-spacer-right"
          name="John Doe"
          size={20}
        />
        <strong>
          user.x_deleted.John Doe
        </strong>
        <span
          className="little-spacer-left"
        >
          hotspots.review_history.comment_added
        </span>
        <span
          className="little-spacer-left little-spacer-right"
        >
          -
        </span>
        <DateTimeFormatter
          date="2018-09-10"
        />
      </div>
      <div
        className="spacer-top display-flex-space-between"
      >
        <SafeHTMLInjection
          htmlAsString="<strong>TEST</strong>"
          sanitizeLevel={2}
        >
          <div
            className="markdown"
          />
        </SafeHTMLInjection>
      </div>
    </li>
    <li
      className="padded-top padded-bottom bordered-top"
      key="5"
    >
      <div
        className="display-flex-center"
      >
        <withAppStateContext(Avatar)
          className="little-spacer-right"
          name="john.doe"
          size={20}
        />
        <strong>
          john.doe
        </strong>
        <span
          className="little-spacer-left"
        >
          hotspots.review_history.comment_added
        </span>
        <span
          className="little-spacer-left little-spacer-right"
        >
          -
        </span>
        <DateTimeFormatter
          date="2018-09-10"
        />
      </div>
      <div
        className="spacer-top display-flex-space-between"
      >
        <SafeHTMLInjection
          htmlAsString="<strong>TEST</strong>"
          sanitizeLevel={2}
        >
          <div
            className="markdown"
          />
        </SafeHTMLInjection>
      </div>
    </li>
    <li
      className="padded-top padded-bottom bordered-top"
      key="6"
    >
      <div
        className="display-flex-center"
      >
        <withAppStateContext(Avatar)
          className="little-spacer-right"
          name="John Doe"
          size={20}
        />
        <strong>
          John Doe
        </strong>
        <span
          className="little-spacer-left"
        >
          hotspots.review_history.comment_added
        </span>
        <span
          className="little-spacer-left little-spacer-right"
        >
          -
        </span>
        <DateTimeFormatter
          date="2018-09-10"
        />
      </div>
      <div
        className="spacer-top display-flex-space-between"
      >
        <SafeHTMLInjection
          htmlAsString="<strong>TEST</strong>"
          sanitizeLevel={2}
        >
          <div
            className="markdown"
          />
        </SafeHTMLInjection>
        <div>
          <div
            className="dropdown"
          >
            <Toggler
              onRequestClose={[Function]}
              open={false}
              overlay={
                <DropdownOverlay
                  placement="bottom-right"
                >
                  <HotspotCommentPopup
                    markdownComment="*TEST*"
                    onCancelEdit={[Function]}
                    onCommentEditSubmit={[Function]}
                  />
                </DropdownOverlay>
              }
            >
              <EditButton
                className="button-small"
                onClick={[Function]}
              />
            </Toggler>
          </div>
          <Dropdown
            onOpen={[Function]}
            overlay={
              <div
                className="padded abs-width-150"
              >
                <p>
                  issue.comment.delete_confirm_message
                </p>
                <Button
                  className="button-red big-spacer-top pull-right"
                  onClick={[Function]}
                >
                  delete
                </Button>
              </div>
            }
            overlayPlacement="bottom-right"
          >
            <DeleteButton
              className="button-small"
            />
          </Dropdown>
        </div>
      </div>
    </li>
    <li
      className="padded-top padded-bottom bordered-top"
      key="7"
    >
      <div
        className="display-flex-center"
      >
        <withAppStateContext(Avatar)
          className="little-spacer-right"
          name="John Doe"
          size={20}
        />
        <strong>
          John Doe
        </strong>
        <span
          className="little-spacer-left"
        >
          hotspots.review_history.created
        </span>
        <span
          className="little-spacer-left little-spacer-right"
        >
          -
        </span>
        <DateTimeFormatter
          date="2018-09-01"
        />
      </div>
    </li>
  </ul>
</Fragment>
`;
